# small_gl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
include/small_gl/: array.hpp  buffer.hpp  dispatch.hpp  enum.hpp  exception.hpp  framebuffer.hpp  fwd.hpp  program.hpp  renderbuffer.hpp  sampler.hpp  texture.hpp  utility.hpp  window.hpp
include/small_gl/detail/: define.hpp  detail_buffer.hpp  detail_texture.hpp  eigen.hpp  eigen_array.ext  eigen_arraybase.ext  eigen_matrix.ext  eigen_matrixbase.ext  enum.hpp  exception.hpp  filewatcher.hpp  fwd.hpp  glm.hpp  handle.hpp  math.hpp  program_cache.hpp  serialization.hpp  texture.hpp  trace.hpp  utility.hpp
src/: array.cpp  buffer.cpp  dispatch.cpp  exception.cpp  framebuffer.cpp  program.cpp  renderbuffer.cpp  sampler.cpp  texture.cpp  utility.cpp  window.cpp
src/detail/: program_cache.cpp
